--- a/ptm.html
+++ b/ptm.html
@@ -66,19 +66,23 @@ animation: AnimationName 12s ease infinite;">
                 <p>Attached below is the scan code for the AR filter. By scanning it using the Snapchat app, you will
                     able to preview the AR filter for yourself on your personal phone.
                 </p>
-                <div class="contentPlaceholder" style="text-align: center;">
-                    <img style="width: 25%;height: auto;margin-top: 4vw;" src="content/scanCodeAR.png"><br />
+                
+                <div style="text-align: center;">
+                    <img style="width: 100%;height: auto;" src="content/zegmijAR_Preview.jpg"></div>
+                <br /><div class="contentPlaceholder" style="text-align: center;">
+                    <img style="width: 45%;height: auto;" src="content/scanCodeAR.png"><br />
                     <a
                         href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=a57c53fa34444780a3efee374229967c&metadata=01">Snapchat
                         AR filter</a>
                 </div>
-
+                
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+            <br />
 
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">The Escape Room</h2>
