--- a/sco.html
+++ b/sco.html
@@ -29,7 +29,7 @@ animation: AnimationName 12s ease infinite;">
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
-            <h2 id="titleText">Strategy & Concepting</h2>
+            <h2 id="titleText">Strategy & Concept</h2>
         </div>
 
         <br />
@@ -41,8 +41,58 @@ animation: AnimationName 12s ease infinite;">
             <p style="text-align: center;">B. Ability to create media products for your client by using experiments,
                 iterations
                 and examples from the professional field.</p>
-            <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div>
+
+        <br />
+
+        <div class="contentDivider">
+            <h1 style="text-align:center;font-size: 40px;margin: 20px 0px 0px 0px;">Concept</h1>
+        </div>
+        <section id="content">
+            <article>
+                <h2 style="font-size: 40px;margin-bottom:0px;">Visual Association</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Visual Association is a way to analyse on how visual images communicate a
+                    message and how images correlates to each other.</p>
+                <p>In this assigment i had to search for two different images and to visually associate them in terms of
+                    shape, content, structure, and composition.</p>
+                    <!-- <a href="content/visual_semiotics.pdf">Visual semiotics PDF</a></div> -->
+                    <embed src="content/visual_semiotics.pdf" type="application/pdf"></embed>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <br />
+            <article>
+                <h2 style="font-size: 40px;margin-bottom:0px;">Colour Palletes</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
+                <p></p>Lorem ipsum dolor sit amet.</p>
+                <p>The colour pallete i have originally made for the client based on the client preference of pastel
+                    colours and "iridescent" style.</p>
+                    <img class="contentAttachment" src="content/ConceptingColor.jpg">
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article>
+                <h2 style="font-size: 40px;margin-bottom:0px;">Brand Style Guide</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
+                <p></p>Lorem ipsum dolor sit amet.</p>
+                <p>This brandguide is made as a part of the deliverables for the client.</p>
+
+                    <embed src="content/brandguide5.pdf" type="application/pdf"></embed>
+
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+        </section>
 
         <br />
 
@@ -73,6 +123,8 @@ animation: AnimationName 12s ease infinite;">
                         <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                     </div>
             </article>
+            <br />
+
             <article id="cjm">
                 <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Customer Journey Map</h4>
                     <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
@@ -86,7 +138,8 @@ animation: AnimationName 12s ease infinite;">
                     <a href="" style="color: grey;">Target audience exercise 2</a>
                     <a href="" style="color: grey;">Target audience exercise 3</a> -->
                     <p>In this assignment i have made a customer journey map of the client.</p>
-                    <img class="contentAttachment" src="content/CJM.png" alt="Missing file">
+                    <div class="contentPlaceholder"><img class="contentAttachment" src="content/CJM.png"
+                            alt="Missing file"></div>
                     <p>The CJM above describes the states of how the customer would react to the artist, in more detail:
                     </p>
                     <h2 style="margin-bottom: 0;">Awareness</h2>
@@ -116,37 +169,13 @@ animation: AnimationName 12s ease infinite;">
                     </div>
             </article>
         </section>
-
-        <br />
-
-        <div class="contentDivider">
-            <h1 style="text-align:center;font-size: 40px;margin: 20px 0px 0px 0px;">Concept</h1>
-        </div>
-        <section id="content">
-            <article>
-                <h2 style="font-size: 40px;margin-bottom:0px;">Visual Association</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Visual Association is a way to analyse on how visual images communicate a
-                    message and how images correlates to each other.</p>
-                <p>In this assigment i had to search for two different images and to visually associate them in terms of
-                    shape, content, structure, and composition.</p>
-                <!-- <a href="content/visual_semiotics.pdf">Visual semiotics PDF[WIP]</a> -->
-                <embed src="content/visual_semiotics.pdf" type="application/pdf"></embed>
-
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>
-        </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
         <a href="ux.html">UX</a>
-        <a href="sco.html">Strategy & Concept</a>
+        <a href="sco.html">SCO</a>
         <a href="ptm.html">Project</a>
     </div>
 
