--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@ animation: AnimationName 12s ease infinite;">
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <!-- Content -->
-        <section class="content" style="margin-top: 0; position: fixed;background: none;color: white;box-shadow: none;">
+        <section style="margin-top: 0; position: fixed;background: none;color: white;box-shadow: none;">
             <h1
-                style="margin-bottom: 0px; font-size: 72px; font-weight: bold;
+                style="text-align: center;margin-bottom: 0px; font-size: 15vw; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
-                Welcome</h1>
-            <p style="margin-top: 0px;">This site is in development. Your consideration is advised.</p><a
-                href="interactiveVisual.html" style="color: white;">Link to the interactive
-                visual.</a>
+                Welcome.</h1>
+            <p style="text-align: center;">In this portfolio is an overwiew of my studies in the semester 2 of ICT &
+                Media Design.</p>
+            <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
+            <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
         </section>
     </div>
 
@@ -50,7 +51,7 @@ animation: AnimationName 12s ease infinite;">
         <a href="dev.html">Development</a>
         <!-- <a href="" style="color: grey;">Development[WIP]</a> -->
         <a href="ux.html">UX</a>
-        <a href="sco.html">Strategy & Concept</a>
+        <a href="sco.html">SCO</a>
         <a href="ptm.html">Project</a>
     </div>
 
