--- a/ux.html
+++ b/ux.html
@@ -125,13 +125,24 @@ animation: AnimationName 12s ease infinite;">
                     emotional appeal of the product.</p>
                 <p>In this exercise i have made a simple yet understandable storyboard all drawn straight digitally.</p>
                 <img class="contentAttachment" src="content/storyboard.png"></img>
-
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
                     <p style="display: none;font-style: italic;">As feedback from Jo-An the storyboard looks nice and
                         understandable.
                         I now know that a storyboard can be a useful tool for UX design.>
+                </div>
+            </article>
+            <br />
+            <article id="storyboard">
+                <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
+                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
+                <p>Before starting development of this portfolio, i need to conceptualize the style and how the interface should look like. My direction is to make a clean minimalist and presentable looking site with an intuitive interface.</p>
+                <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
         </section>
@@ -143,7 +154,7 @@ animation: AnimationName 12s ease infinite;">
         <!-- <a href="" style="color: grey;">Development[WIP]</a> -->
 
         <a href="ux.html">UX</a>
-        <a href="sco.html">Strategy & Concept</a>
+        <a href="sco.html">SCO</a>
         <a href="ptm.html">Project</a>
     </div>
 
