--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ animation: AnimationName 12s ease infinite;">
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <!-- Content -->
-        <section style="margin-top: 0; position: fixed;background: none;color: white;box-shadow: none;">
+        <section id="home">
             <h1
-                style="text-align: center;margin-bottom: 0px; font-size: 15vw; font-weight: bold;
+                style="text-align: center;margin: 0px; font-size: 12vw; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
                 Welcome.</h1>
-            <p style="text-align: center;">In this portfolio is an overwiew of my studies in the semester 2 of ICT &
+            <p style="text-align: center;margin: 0px;">In this portfolio is an overwiew of my studies in the semester 2 of ICT &
                 Media Design.</p>
             <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
             <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
