--- a/sco.html
+++ b/sco.html
@@ -50,14 +50,51 @@ animation: AnimationName 12s ease infinite;">
         </div>
         <section id="content">
             <article>
+                <h2 style="font-size: 40px;margin-bottom:0px;">Photography</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae vulputate elit, molestie convallis
+                    orci. Vestibulum sem nulla, imperdiet non ligula at, dapibus egestas eros. </p>
+                    <div class="slideshow-container">
+                        <!-- Full-width images with number and caption text -->
+                        <div class="mySlides fade">
+                            <div class="numbertext">1 / 3</div>
+                            <img src="content/photography/img1.JPG" style="width:100%">
+                            <div class="text">Caption Text</div>
+                        </div>
+
+                        <div class="mySlides fade">
+                            <div class="numbertext">2 / 3</div>
+                            <img src="content/photography/img2.JPG" style="width:100%">
+                            <div class="text">Caption Two</div>
+                        </div>
+
+                        <div class="mySlides fade">
+                            <div class="numbertext">3 / 3</div>
+                            <img src="content/photography/img3.jpg" style="width:100%">
+                            <div class="text">Caption Three</div>
+                        </div>
+
+                        <!-- Next and previous buttons -->
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    </div>
+                <br />
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+
+            <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Visual Association</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
                 <p>Visual Association is a way to analyse on how visual images communicate a
                     message and how images correlates to each other.</p>
                 <p>In this assigment i had to search for two different images and to visually associate them in terms of
                     shape, content, structure, and composition.</p>
-                    <!-- <a href="content/visual_semiotics.pdf">Visual semiotics PDF</a></div> -->
-                    <embed src="content/visual_semiotics.pdf" type="application/pdf"></embed>
+                <!-- <a href="content/visual_semiotics.pdf">Visual semiotics PDF</a></div> -->
+                <embed src="content/visual_semiotics.pdf" type="application/pdf"></embed>
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
@@ -71,7 +108,7 @@ animation: AnimationName 12s ease infinite;">
                 <p></p>Lorem ipsum dolor sit amet.</p>
                 <p>The colour pallete i have originally made for the client based on the client preference of pastel
                     colours and "iridescent" style.</p>
-                    <img class="contentAttachment" src="content/ConceptingColor.jpg">
+                <img class="contentAttachment" src="content/ConceptingColor.jpg">
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
@@ -84,7 +121,7 @@ animation: AnimationName 12s ease infinite;">
                 <p></p>Lorem ipsum dolor sit amet.</p>
                 <p>This brandguide is made as a part of the deliverables for the client.</p>
 
-                    <embed src="content/brandguide5.pdf" type="application/pdf"></embed>
+                <embed src="content/brandguide5.pdf" type="application/pdf"></embed>
 
                 <div class="feedback">
                     <h1>Feedback</h1>
@@ -181,7 +218,7 @@ animation: AnimationName 12s ease infinite;">
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
-    <script src="js/OrbitControls.js"></script>
+    <script src="js/gallery.js"></script>
     <script src="js/main.js"></script>
     <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
 </body>
