--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@ animation: AnimationName 12s ease infinite;">
 
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
-        <!-- Content -->
         <section id="home">
             <h1
                 style="text-align: center;margin: 0px; font-size: 12vw; font-weight: bold;
@@ -43,6 +42,17 @@ animation: AnimationName 12s ease infinite;">
             <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
             <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
         </section>
+        <!--<article>
+            <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
+            <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
+            <p></p>Lorem ipsum dolor sit amet.</p>
+            <div class="contentAttachment" src="content/ConceptingColor.jpg">
+            <div class="feedback">
+                <h1>Feedback</h1>
+                <div class="plus-minus-toggle collapsed"></div>
+                <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+            </div>
+        </article>-->
     </div>
 
     <!-- Off-canvas menu -->
