--- a/ptm.html
+++ b/ptm.html
@@ -63,19 +63,24 @@ animation: AnimationName 12s ease infinite;">
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
                 <p>Artificial Reality have always been in my intrest and during this sprint i was able to make an end
                     product in the form of an AR filter(hosted in Snapchat) for the client.</p>
+                <p>The way i developed this AR filter is to use an AR development software called Lens Studio provided
+                    by Snapchat. Then first i made the 'segmentation' texture for the pink background to not clip with
+                    user's body. Then i made the 'Zeg Mij' comic bubble to attach to the user's head. As for the
+                    finishing touches i include Aisha's flagship song to play as the AR filter loads.</p>
                 <p>Attached below is the scan code for the AR filter. By scanning it using the Snapchat app, you will
                     able to preview the AR filter for yourself on your personal phone.
                 </p>
-                
+
                 <div style="text-align: center;">
-                    <img style="width: 100%;height: auto;" src="content/zegmijAR_Preview.jpg"></div>
-                <br /><div class="contentPlaceholder" style="text-align: center;">
-                    <img style="width: 45%;height: auto;" src="content/scanCodeAR.png"><br />
+                    <img style="width: 50%;height: auto;" src="content/zegmijAR_Preview.jpg"></div>
+                <br />
+                <div class="contentPlaceholder" style="text-align: center;">
+                    <img style="width: 35%;height: auto;" src="content/scanCodeAR.png"><br />
                     <a
                         href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=a57c53fa34444780a3efee374229967c&metadata=01">Snapchat
                         AR filter</a>
                 </div>
-                
+
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
