--- a/sco.html
+++ b/sco.html
@@ -52,26 +52,26 @@ animation: AnimationName 12s ease infinite;">
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Photography</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae vulputate elit, molestie convallis
-                    orci. Vestibulum sem nulla, imperdiet non ligula at, dapibus egestas eros. </p>
+                <p>During the intro week, i learnt a lot of valuable lessons about photography. I finally know how to manually operate a camera such as finding the optimal exposure using the <em>exposure triangle</em>, finding the right angle to create drama, and adjusting RAW image file post-shooting to refine the image. </p>
+                <br />
                     <div class="slideshow-container">
                         <!-- Full-width images with number and caption text -->
                         <div class="mySlides fade">
                             <div class="numbertext">1 / 3</div>
                             <img src="content/photography/img1.JPG" style="width:100%">
-                            <div class="text">Caption Text</div>
+                            <div class="text">Van Abbemuseum</div>
                         </div>
 
                         <div class="mySlides fade">
                             <div class="numbertext">2 / 3</div>
                             <img src="content/photography/img2.JPG" style="width:100%">
-                            <div class="text">Caption Two</div>
+                            <div class="text">Philipsdorp</div>
                         </div>
 
                         <div class="mySlides fade">
                             <div class="numbertext">3 / 3</div>
-                            <img src="content/photography/img3.jpg" style="width:100%">
-                            <div class="text">Caption Three</div>
+                            <img src="content/photography/img3.JPG" style="width:100%">
+                            <div class="text">Gerard Phillipslaan</div>
                         </div>
 
                         <!-- Next and previous buttons -->
@@ -105,22 +105,36 @@ animation: AnimationName 12s ease infinite;">
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Colour Palletes</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
-                <p></p>Lorem ipsum dolor sit amet.</p>
-                <p>The colour pallete i have originally made for the client based on the client preference of pastel
+                <!-- <p></p>Lorem ipsum dolor sit amet.</p> -->
+                <p>Below is moodboard consisting of the colour pallete i have originally made for the client based on the client preference of pastel
                     colours and "iridescent" style.</p>
+                    <p>The way i create this moodboard is to first define the analogous color palletes in Adobe Color and to put in a 3D software(i use Cinema 4D) to give an better look of how the 'iridescent' object would look like in context with the color scheme. </p>
+
                 <img class="contentAttachment" src="content/ConceptingColor.jpg">
+
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+            <!--<article>
+                <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
+                <p></p>Lorem ipsum dolor sit amet.</p>
+                <div class="contentAttachment" src="content/ConceptingColor.jpg">
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>-->
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Brand Style Guide</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
-                <p></p>Lorem ipsum dolor sit amet.</p>
-                <p>This brandguide is made as a part of the deliverables for the client.</p>
-
+                <p>A brandguide is a useful as a reference tool to help maintain consistency in what a brand looks, feels, and sounds like.</p>
+                <p>I have partake in making this brandguide as a part of the deliverables for the client.</p>
+                
                 <embed src="content/brandguide5.pdf" type="application/pdf"></embed>
 
                 <div class="feedback">
@@ -175,8 +189,8 @@ animation: AnimationName 12s ease infinite;">
                     <a href="" style="color: grey;">Target audience exercise 2</a>
                     <a href="" style="color: grey;">Target audience exercise 3</a> -->
                     <p>In this assignment i have made a customer journey map of the client.</p>
-                    <div class="contentPlaceholder"><img class="contentAttachment" src="content/CJM.png"
-                            alt="Missing file"></div>
+                    <img class="contentAttachment" src="content/CJM.png"
+                            alt="Missing file">
                     <p>The CJM above describes the states of how the customer would react to the artist, in more detail:
                     </p>
                     <h2 style="margin-bottom: 0;">Awareness</h2>
@@ -205,6 +219,27 @@ animation: AnimationName 12s ease infinite;">
                         <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                     </div>
             </article>
+            
+            <br />
+
+            <article>
+                <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Brand-, Market- and Competitive Analysis</h4>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
+                    <h2>Brand Analysis</h2>
+                    <p>Our client is passionate about her career as an artist regardless her experince as a fresh new artist. Aisha's vision is to spread happiness and good feelings through her music and caters to a fairly young audience. </p>
+                    <h2>Market Analysis</h2>
+                    <p>The most prevalent platform our client has is her social media especially her Instagram page. She mostly distribute her content through it and her audience could react to her feeds quickly.</p>
+                    <h2>Competitive Analysis</h2>
+                    <p>As a group we did an online research to compare on how would our client compete with other artists with a similar target audience.</p>
+                    <embed src="content/marketanalysis.pdf" type="application/pdf"></embed>
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle collapsed"></div>
+                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    </div>
+            </article>
+
+
         </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
