--- a/ux.html
+++ b/ux.html
@@ -109,7 +109,35 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+
+            <br />
+
+            <article>
+                <h2 style="font-size:40px;margin:0px;">Task Analysis</h2>
+                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h3>
+                <p>With task analysis i am able to organize my task to reach a certain goal that are desired. Also accompanied with the user stories, i can see on how would the perspective of the user be and adjust the end-product to meet the expectation.</p>
+                <embed src="content/UEX_Task_Analysis.pdf" type="application/pdf"></embed>
+
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <br />
+            <article>
+                <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
+                <p></p>Lorem ipsum dolor sit amet.</p>
+                <div class="contentAttachment" src="content/ConceptingColor.jpg">
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
         </section>
+
 
         <br />
 
@@ -130,15 +158,35 @@ animation: AnimationName 12s ease infinite;">
                     <div class="plus-minus-toggle collapsed"></div>
                     <p style="display: none;font-style: italic;">As feedback from Jo-An the storyboard looks nice and
                         understandable.
-                        I now know that a storyboard can be a useful tool for UX design.>
+                        I now know that a storyboard can be a useful tool for UX design.</p>
                 </div>
             </article>
+
             <br />
-            <article id="storyboard">
+
+            <article>
+
                 <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
                 <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
                 <p>Before starting development of this portfolio, i need to conceptualize the style and how the interface should look like. My direction is to make a clean minimalist and presentable looking site with an intuitive interface.</p>
                 <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+
+            <br />
+
+            <article>
+                <h2 style="font-size:40px;margin:0px;">Video Prototype</h2>
+                <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <video class="contentAttachment" width="1920" height="1080" controls>
+                    <source src="" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
