--- a/dev.html
+++ b/dev.html
@@ -44,8 +44,8 @@ animation: AnimationName 12s ease infinite;">
 
         <section id="content">
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
-            <article>
-                <!--<h2 style="font-size: 40px;margin-bottom: 0;">Learning About Front-End Web Development Basics</h2>
+            <!--<article>
+                <h2 style="font-size: 40px;margin-bottom: 0;">Learning About Front-End Web Development Basics</h2>
                 <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
                 <p>Since before the semester starts i have been
                     preparing and learning the basics of Front-End Web Development which consist of HTML(Hyper Text
@@ -108,48 +108,49 @@ animation: AnimationName 12s ease infinite;">
                         functionality as i find it to be a very useful tool.</p>
                 </div>
             </article>-->
-                <article>
-                    <h2 style="font-size: 40px;margin-bottom: 0;">Interactive Visual Art</h2>
+            <article>
+                <h2 style="font-size: 40px;margin-bottom: 0;">Interactive Visual Art</h2>
 
-                    <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
 
-                    <!-- <p>I've always been intrigued on making web graphics visuals</p> -->
-                    <!-- <p>As an exercise to sharpen my JavaScript skills. </p> -->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
-                        accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>
+                <!-- <p>I've always been intrigued on making web graphics visuals</p> -->
+                <!-- <p>As an exercise to sharpen my JavaScript skills. </p> -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
+                    accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>
+                <!-- <p>I have always been intrigued of visuals </p> -->
 
-                    <div class="contentPlaceholder" style="text-align: center;">
-                        <a href="interactiveVisual.html">Link to the interactive
+                <div class="contentPlaceholder" style="text-align: center;">
+                    <a href="interactiveVisual.html">Link to the interactive
                         visual.</a>
-                    </div>
+                </div>
 
-                    <div class="feedback">
-                        <h1>Feedback</h1>
-                        <div class="plus-minus-toggle collapsed"></div>
-                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                    </div>
-                </article>
-<br />
-                <article>
-                    <h2 style="font-size: 40px;margin-bottom: 0;">Responsive Web Design</h2>
-                    <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
-                    <p>Nowadays people uses many forms of digital devices to open websites. Sometimes you open a website
-                        on
-                        a PC and other times on your personal phone. But when viewing a website on a smaller screen real
-                        estate the website needs to scale accordingly otherwise the elements will clip.
-                    </p>
-                    <p>In this sprint i have implemented a responsive design to this portofolio. Now it can be viewed
-                        properly on either big or small screen sizes.</p>
-                    <video class="contentAttachment" width="1920" height="1080" controls>
-                        <source src="content/rwd_preview.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                    <div class="feedback">
-                        <h1>Feedback</h1>
-                        <div class="plus-minus-toggle collapsed"></div>
-                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                    </div>
-                </article>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <br />
+            <article>
+                <h2 style="font-size: 40px;margin-bottom: 0;">Responsive Web Design</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
+                <p>Nowadays people uses many forms of digital devices to open websites. Sometimes you open a website
+                    on
+                    a PC and other times on your personal phone. But when viewing a website on a smaller screen real
+                    estate the website needs to scale accordingly otherwise the elements will clip.
+                </p>
+                <p>In this sprint i have implemented a responsive design to this portofolio. Now it can be viewed
+                    properly on either big or small screen sizes.</p>
+                <video class="contentAttachment" width="1920" height="1080" controls>
+                    <source src="content/rwd_preview.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <div class="plus-minus-toggle collapsed"></div>
+                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
         </section>
     </div>
 
