ptm content update

--- a/ptm.html
+++ b/ptm.html
@@ -65,7 +65,7 @@ animation: AnimationName 12s ease infinite;">
                     product in the form of an AR filter(hosted in Snapchat) for the client.</p>
                 <p>The way i developed this AR filter is to use an AR development software called Lens Studio provided
                     by Snapchat. Then first i made the 'segmentation' texture for the pink background to not clip with
-                    user's body. Then i made the 'Zeg Mij' comic bubble to attach to the user's head. As for the
+                    user's body. Then i made the 'Zeg Mij' comic bubble that anchors to the user's head. As for the
                     finishing touches i include Aisha's flagship song to play as the AR filter loads.</p>
                 <p>Attached below is the scan code for the AR filter. By scanning it using the Snapchat app, you will
                     able to preview the AR filter for yourself on your personal phone.
@@ -90,15 +90,58 @@ animation: AnimationName 12s ease infinite;">
             <br />
 
             <article>
-                <h2 style="font-size: 40px;margin-bottom: 0;">The Escape Room</h2>
+                <h2 style="font-size: 40px;margin-bottom: 0;">Aisha’s Online Quest </h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
-                    accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>
+                <p>Aisha’s Online Quest is made to grab the interest of her audience by providing challenging mini
+                    puzzles and satisfying reward.</p>
+                <h2>How our online quest is going to work</h2>
+                <p>After we made some brainstorm, we clarified the system and the journey for the user.
+                    Underneath the steps to follow as user:</p>
+                <ul>
+                    <li> User watches video with hidden code</li>
+                    <li> User finds the code and proceeds to follow the link given in this code</li>
+                    <li> The link brings the user to an Instagram page, where another code is hidden</li>
+                    <li> This new code leads to a website, where the last step finds place</li>
+                    <li> On this website, there is a QR code which brings the user to another site where the user can
+                        finally get their reward: a custom AR filter for Snapchat.</li>
+                </ul>
+                <h2>Aisha’s Quest Product Execution</h2>
+                <p>Below we show the links and the steps to follow for our current product.
+
+                    First, the user gets the code encrypted in our video. Which later brings him to this instagram
+                    account: <a
+                        href="https://www.instagram.com/aishazoektocht/">https://www.instagram.com/aishazoektocht/</a>
+                </p>
+                <img class="contentAttachment" src="content/oq1.png"></img>
+                <p>Then, if the user is able to figure out the link that is hidden in the instagram posts, the user will
+                    get redirected to this website: <a
+                        href="http://www.aisha9987.c1.biz/X568/">http://www.aisha9987.c1.biz/X568/</a></p>
+                <img class="contentAttachment" src="content/oq2.png"></img>
+                <p>Afterwards, the user has to fill in a password to get to the next part of the Online Quest.
+                    If the user fills in the password “beschermd”, the user will get redirected to another part of the
+                    Online Quest, a YouTube video: <a
+                        href="https://www.youtube.com/watch?v=WrfrC2MousY">https://www.youtube.com/watch?v=WrfrC2MousY</a>
+                </p>
+                <img class="contentAttachment" src="content/oq3.png"></img>
+                <p>In this video, the user has to figure out the hidden message. The hidden message is a link to another
+                    subsite of the earlier website: <a
+                        href="http://www.aisha9987.c1.biz/C249/">http://www.aisha9987.c1.biz/C249/</a></p>
+                <img class="contentAttachment" src="content/oq4.png"></img>
+                <p>At the end, the website is a poster of Aisha. The poster of Aisha is actually a QR-code to the prize
+                    of the Quest. If you scan the code you will get redirected to another part of the website containing
+                    a Snapchat-code. If you scan the code you will get a new filter on your snapchat account. The
+                    Snapchat-filter is the price after completing the Online Quest.</p>
+                <img class="contentAttachment" src="content/oq5.png"></img>
 
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    <p style="display: none;font-style: italic;">Aisha thought that the Online Quest was something
+                        unique and fun, albeit she only had a comment regarding the location of the music video since
+                        she disliked it.<br /><br /> The teachers also found our idea something unique and were also
+                        satisfied with what we had made. Evert thought that if a well-known person like Ronnie Flex
+                        would make an Online Quest, then that would be a big hit for Target Audience. He thought it was
+                        primarily an original idea and well made up.</p>
                 </div>
             </article>
 
