--- a/ux.html
+++ b/ux.html
@@ -125,7 +125,7 @@ animation: AnimationName 12s ease infinite;">
                 </div>
             </article>
             <br />
-            <article>
+            <!--<article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
                 <p></p>Lorem ipsum dolor sit amet.</p>
@@ -135,7 +135,7 @@ animation: AnimationName 12s ease infinite;">
                     <div class="plus-minus-toggle collapsed"></div>
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
-            </article>
+            </article>-->
         </section>
 
 
